single-ec2-instance-with-alb-ssl/eip.tf
###############################################
#  ELASTIC IP                                  #
###############################################
resource "aws_eip" "lb" {
  instance = aws_instance.web01.id
  vpc      = true
}
